--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tone": "^15.0.4"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
@@ -29,7 +30,7 @@
     "@types/react-dom": "18.2.18",
     "postcss": "8.4.33",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss": "3.4.1",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3"
   }
