--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "next": "latest",
     "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
+    "qrcode": "^1.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tone": "^15.0.4"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
     "postcss": "8.4.33",
