--- a/package.json
+++ b/package.json
@@ -21,17 +21,20 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@xyflow/react": "^12.3.2",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "geist": "^1.2.1",
     "lucide-react": "^0.436.0",
+    "nanoid": "^5.0.7",
     "next": "latest",
     "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
     "qrcode": "^1.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.3.0",
     "tone": "^15.0.4",
     "vaul": "^1.0.0"
   },
