--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0",
     "tone": "^15.0.4",
-    "vaul": "^1.0.0"
+    "vaul": "^1.0.0",
+    "webmidi": "^3.1.11"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
