--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "geist": "^1.2.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.436.0",
     "nanoid": "^5.0.7",
     "next": "latest",
