--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-icons": "^5.3.0",
     "tone": "^15.0.4",
     "vaul": "^1.0.0",
-    "webmidi": "^3.1.11"
+    "webmidi": "^3.1.11",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
